<resources>
    <string name="app_name">WeatherAppMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="buttonShowWeather">Show Weather</string>
    <string name="hintTextInputCity">Enter city</string>
    <string name="textViewRecentCityItem" />
    <string name="textViewRecenrCities">Recent cities:</string>
    <string name="textviewShowAddParam">show additional:</string>
    <string name="switchShowWindSpeed">wind speed</string>
    <string name="switchShowAirPressure">air pressure</string>
    <string name="switchShowHumidity">humidity</string>
    <string name="switchShowRainPossibility">rain possibility</string>
    <string name="textviewShowTemperatureMesur">show temperature in:</string>
    <string name="radioButtonSetTempCelcium">C</string>
    <string name="radioButtonSetTempFahren">F</string>
    <string name="textviewSetTheme">theme:</string>
    <string name="switchDarkLightTheme">light / dark</string>
    <string name="textViewNow">now:</string>
    <string name="textViewCityName">- / -</string>
    <string name="show_weather_icons">show_weather_icons</string>
    <string name="textVewTemperature">- / -</string>
    <string name="textViewTempMesur">C</string>
    <string name="textViewAngle">o</string>
    <string name="textViewTextWeatherIcon">- / -</string>
    <string name="textviewWindValue">- / -</string>
    <string name="textviewPressureValue">- / -</string>
    <string name="textviewWindSpeedMesur">km/h</string>
    <string name="textviewPressurMesur">hpa</string>
    <string name="textviewProbablyMesur">%</string>
    <string name="textviewPobablyValue">78</string>
    <string name="textviewHumidityValue">- / -</string>
    <string name="textviewHumidityyMesur">%</string>
    <string name="textViewPlusTemp">+</string>
    <string name="dayOfWeek">day</string>
    <string name="textDate">date</string>
    <string name="title_dialog">City not found!</string>
    <string name="message_dialog">Enter city name again!</string>
    <string name="ok_button_dialog">OK</string>
    <string name="textViewQueryHistory">query history:</string>
    <string name="action_history">History</string>
    <string name="remove">Remove item</string>
    <string name="clearHistory">Clear history</string>
    <string name="textRecyclerItemDate">date</string>
    <string name="textRecyclerItemCityName">city</string>
    <string name="textRecyclerItemTemp">temperature</string>
    <string name="textClock">time</string>
    <string name="add_to_recent_cities">Add to recent cities</string>

</resources>
