<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android. om/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textRecyclerItemCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRecyclerItemCityName"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textRecyclerItemDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textRecyclerItemDate"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textRecyclerItemTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textRecyclerItemTemp"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>